Swagger definitions for OAuth flow
